# cmu_planner

./: .gitignore  Dockerfile  Dockerfile.complete  Dockerfile.full  Dockerfile.runtime  MULTI_ROBOT_SETUP.md  README.md  build_complete_docker.sh  build_docker.sh  docker-compose-macvlan.yml  docker-compose-network.yml  docker-compose.yml  docker_mtare_robot.sh  kill_all.sh  run_docker_robot.sh  run_mtare.sh  run_mtare_with_boundary.sh  run_multi_robot_native.sh  run_multi_robot_simple.sh  run_unity_instance_docker.sh  source_workspace_setup.bash  start_multi_robot_unity.sh  start_unity_multi_instance.sh  stop.sh  system_bagfile.sh  system_bagfile_with_exploration_planner.sh  system_bagfile_with_mtare_planner.sh  system_bagfile_with_route_planner.sh  system_real_robot.sh  system_real_robot_with_exploration_planner.sh  system_real_robot_with_exploration_planner_d1.sh  system_real_robot_with_mtare_planner.sh  system_real_robot_with_mtare_planner_d1.sh  system_real_robot_with_route_planner.sh  system_real_robot_with_route_planner_d1.sh  system_simulation.sh  system_simulation_with_exploration_planner_gazebo.sh  system_simulation_with_exploration_planner_robot1_only.sh  system_simulation_with_mtare_planner.sh  system_simulation_with_mtare_planner_multi_robot.sh  (+5 more)
docs/: D1H_ODIN_NAV_FLOW.md  D1H_ODIN_PARAMETER_GUIDE_CN.md  FOXGLOVE_LAYOUT.md  MINIMAL_WHITEBOX_STAIR_SCENE_CN.md  STAIR_2_5D_PLAN_CN.md  TARE_EXPLORATION_GUIDE_CN.md  WEEKLY_SUMMARY_2026_04_28_CN.md
docs/foxglove/: d1h_exploration_debug_layout.json  d1h_odin_navigation_layout.json
scripts/: analyze_whitebox_terrain_map.py  cleanup_d1_nav_stack.sh  create_boundary_ply.py  generate_foxglove_layout.py  generate_unity_office_gazebo_scene.py  generate_whitebox_stair_test_scene.py  multilevel_stair_frontier_arbiter.py  probe_whitebox_terrain_topics.py  publish_static_registered_scan.py  publish_whitebox_vehicle_terrain_map.py  record_boundary_from_odom.py  record_boundary_from_odom.sh  save_odin_map.sh  start_d1_exploration_only.sh  start_d1_exploration_relocalization.sh  start_d1_exploration_with_foxglove.sh  start_foxglove_filtered.sh  start_foxglove_registered_scan_only.sh  start_odin_mapping_only.sh  start_odin_relocalization_only.sh  stop_d1_nav_stack.sh  stop_odin_mapping_only.sh  stop_odin_relocalization_only.sh  whitebox_stair_goal_router.py
src/D1/urdf/: D1_description.urdf
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/vehicle_simulator/: CMakeLists.txt  package.xml
src/odin_ros_driver/config/: control_command.yaml  control_command_mapping.yaml  control_command_relocalization.yaml  odin_ros2.rviz
src/odin_ros_driver/src/: host_sdk_sample.cpp
src/slam/arise_slam_mid360/: CMakeLists.txt
src/utilities/d1_compat_bridge/: CMakeLists.txt  package.xml
src/utilities/d1_compat_bridge/config/: d1_lqr_overrides.yaml
src/utilities/d1_compat_bridge/launch/: d1_compat_bridge.launch.py  d1_traditional_hw.launch.py
src/utilities/d1_compat_bridge/src/: d1_compat_bridge_node.cpp
src/utilities/goalpoint_rviz_plugin/: plugin_description.xml
src/utilities/odin_autonomy_bridge/: CMakeLists.txt  package.xml
src/utilities/odin_autonomy_bridge/launch/: odin_autonomy_bridge.launch.py
src/utilities/odin_autonomy_bridge/src/: odin_autonomy_bridge_node.cpp
(+78 files in other folders)
