<?xml version="1.0"?>
<package format="3">
  <name>odin_autonomy_bridge</name>
  <version>0.0.1</version>
  <description>Bridge Odin ROS driver outputs to the autonomy stack standard topics.</description>
  <maintainer email="yy@example.com">yy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
